--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -24,5 +24,9 @@ android.useAndroidX=true
 # Automatically convert third-party libraries to use AndroidX
 android.enableJetifier=true
 
+
 # Version of flipper SDK to use with React Native
 FLIPPER_VERSION=0.37.0
+
+# Changes Size of AsyncStorage
+AsyncStorage_db_size_in_MB=50
