--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -24,6 +24,8 @@ android.useAndroidX=true
 # Automatically convert third-party libraries to use AndroidX
 android.enableJetifier=true
 
+org.gradle.java.home=D:/Program Files/Java/jdk-14.0.2
+
 
 # Version of flipper SDK to use with React Native
 FLIPPER_VERSION=0.37.0
